# ui-inspector

./: .gitignore  README.md  build.sh  pyproject.toml
android_ui_inspector/: __init__.py  __main__.py
backend/: __init__.py  device_manager.py  main.py  requirements.txt  xml_parser.py
backend/device_manager/: __init__.py  android_manager.py  base.py  ios_manager.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  app.css  main.tsx
frontend/src/components/: CoordinateDisplay.tsx  DeviceSelector.tsx  ElementInspector.tsx  ElementInspectorTest.tsx  HierarchyTree.tsx  ScreenCanvas.tsx  XPathPlayground.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
tests/: test_api_debug.py  test_api_dump.json  test_api_enhanced.py  test_bounds_debug.py  test_parse_result.json  test_parsed_hierarchy.json  test_xpath_query.py  test_xpath_real.py
